creacion de pedidos (carro de compras), funciones de mostrar productos, funciones de recuperar carro, arreglo de varios detalles en los paneles